--- a/kinh-nghiem/linh-tinh/CBDC.html
+++ b/kinh-nghiem/linh-tinh/CBDC.html
@@ -223,7 +223,7 @@ data-ad-slot="5275186684">
     <amp-social-share type="email" height="32"></amp-social-share>
   </div>
 
-<h1>Tìm-hiểu Tiền-điện-tử do chính-phủ phát-hành—Central Bank Digital Currency</h1>
+<h1>Tìm-hiểu Tiền-điện-tử do chính-phủ phát-hành<br>Central Bank Digital Currency</h1>
 <div class="right">Viết lần đầu trong Tháng Tư, 2022.</div>
 <!-- body here -->
 <p>Ở các nước đã-phát-triển, việc không cần tiền-mặt trong thanh-toán đã rất phổ-biến. Với những món tiền lớn, người-ta chuyển qua ngân-hàng bằng séc hoặc lệnh-chuyển-tiền. Với những món tiền vừa phải, người ta dùng thẻ-thanh-toán (debit hoặc credit). Ví-điện-tử đã phổ-biến ở một số nơi để thanh-toán những món tiền lẻ hàng ngày. Tuy-nhiên tiền-mặt (tiền giấy, tiền polyme, tiền kim-loại) vẫn còn được dùng nhiều ở đa-số các nước. Ngoài-ra, ví-điện-tử cũng chưa phải là giải-pháp hoàn-hảo, vì nó cần phải có mạng Internet mới thanh-toán được và cần một tổ-chức làm trung-gian (vì vậy sẽ tốn phí).</p>
