--- a/kinh-nghiem/linh-tinh/index.html
+++ b/kinh-nghiem/linh-tinh/index.html
@@ -196,6 +196,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <dt><a href='lau-nha'>Cách lau-nhà cho sạch đều khắp nhà</a></dt>
   <dt><a href='may-lanh'>Hiểu rõ Máy lạnh</a></dt>
   <dt><a href='nong'>Bàn về tình trạng nóng</a></dt>
+  <dt><a href='CBDC'>Tìm-hiểu Tiền-điện-tử do chính-phủ phát-hành</a></dt>
   <dt><a href='nhiet-do'>Nhiệt độ suốt ngày ở Sài Gòn</a></dt>
   <dt><a href='tan-so-cua-tv'>Tần số của TV</a></dt>
   <dt><a href='hong-ngoai'>Chơi với tia hồng ngoại</a></dt>
