--- a/sitemap.html
+++ b/sitemap.html
@@ -239,6 +239,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <a href='/kinh-nghiem/linh-tinh/lau-nha'>Cách lau-nhà cho sạch đều khắp nhà</a><br>
       <a href='/kinh-nghiem/linh-tinh/may-lanh'>Hiểu rõ Máy lạnh</a><br>
       <a href='/kinh-nghiem/linh-tinh/nong'>Bàn về tình trạng nóng</a><br>
+      <a href='/kinh-nghiem/linh-tinh/CBDC'>Tìm-hiểu Tiền-điện-tử do chính-phủ phát-hành</a></dt>
       <a href='/kinh-nghiem/linh-tinh/nhiet-do'>Nhiệt độ suốt ngày ở Sài Gòn</a><br>
       <a href='/kinh-nghiem/linh-tinh/tan-so-cua-tv'>Tần số của TV</a><br>
       <a href='/kinh-nghiem/linh-tinh/hong-ngoai'>Chơi với tia hồng ngoại</a>
