--- a/kinh-nghiem/linh-tinh/bep.html
+++ b/kinh-nghiem/linh-tinh/bep.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave</title>
-<meta name="description" content="So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave" />
+<title>So sánh chi phí giữa dùng bếp-ga—bếp-điện-cảm-ứng—lò-microwave</title>
+<meta name="description" content="So sánh chi phí giữa dùng bếp-ga—bếp-điện-cảm-ứng—lò-microwave" />
 <meta name="keywords" content="hữu ích, tiết kiệm, cá nhân, bếp">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/linh-tinh/bep">
 
@@ -223,7 +223,7 @@ data-ad-slot="5275186684">
     <amp-social-share type="email" height="32"></amp-social-share>
   </div>
 
-  <h1>So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave</h1>
+  <h1>So sánh chi phí giữa dùng bếp-ga—bếp-điện-cảm-ứng—lò-microwave</h1>
   <p>Những tiện nghi trong cuộc sống của con người đã thay đổi theo thời gian. Bếp nấu cũng vậy, từ bếp củi, bếp than, bếp dầu, bếp ga chuyển sang bếp điện. Chi phí sử dụng tăng dần từ bếp củi đến bếp ga, nhưng lại giảm khi từ bếp ga chuyển sang bếp điện từ. Bài viết này tính mức tiết kiệm khi đổi từ bếp ga sang bếp điện từ.</p>
   <p>Những đại lượng có liên quan đến năng lượng, và mối liên hệ giữa chúng:</p>
   <ul>
