--- a/kinh-nghiem/may-tinh/pi-network.html
+++ b/kinh-nghiem/may-tinh/pi-network.html
@@ -322,7 +322,7 @@ Số Node sẽ tăng theo số giao-dịch để giữ cho tốc-độ xử-lý 
 <h4 class="accordion-header">Cài Pi Node trên Windows 10</h4>
 <div>
 	<p>Máy dùng làm Pi Node cần có ít nhất 4 GB RAM, và cần phải có đĩa-cứng ít nhất 100 GB loại SSD để kịp ghi các giao dịch—mỗi giây ghi vào đĩa khoảng 400 Kbyte. Pi Node software gồm có hai phần: phần giao-diện cho người-dùng, và phần xử-lý blockchain—gọi là Consensus. Phần Consensus chạy trên Linux trong một Docker container, Docker container chạy trên Windows WSL2.<!-- Hiện nay Pi Network chỉ phát-hành phần giao-diện cho người-dùng trên Windows và Mac, chưa có trên Linux. --> Nếu bạn dùng Windows 10 Home thì bạn cần phải <a href-"https://windowsloop.com/enable-wsl-windows-10-home/" target='_blank'>enable WSL</a>.</p>
-<p>Đầu tiên, bạn download và cài phần giao-diện cho người-dùng từ <a href="https://minepi.com/node/" target='_blank'>Pi Network</a> vào máy Windows 10. Khi mới cài Pi Node thì phần Consensus chưa được cài vào máy cho tới khi bạn chọn xin làm node. Khi đó, bạn sẽ được hướng-dẫn cài WSL, Docker vào Windows. Sau khi Docker được cài xong, software Pi Node sẽ download PortsChecker image vào Docker và yêu-cầu bạn điều-chỉnh router để từ bên ngoài có thể nối vào node qua các port 31400-31409 trên IPv4.
+<p>Đầu tiên, bạn download và cài phần giao-diện cho người-dùng từ <a href="https://minepi.com/node/" target='_blank'>Pi Network</a> vào máy Windows 10. Khi mới cài Pi Node thì phần Consensus chưa được cài vào máy cho tới khi bạn chọn xin làm node. Khi đó, bạn sẽ được hướng-dẫn cài WSL, Docker vào Windows. Sau khi Docker được cài xong, software Pi Node sẽ download PortsChecker image vào Docker và yêu-cầu bạn điều-chỉnh router để từ bên ngoài có thể nối vào node qua các port 31400-31409 trên IPv4. Trong trường-hợp bạn không được quyền điều-chỉnh router, bạn vẫn có thể chạy Pi Node và được chia ít tiền hơn.
 <br>Sau khi PortsChecker chạy khoảng hơn một ngày với tổng-thời-gian chạy hơn 90% thì Pi Network sẽ thông-báo rằng máy của bạn được làm ứng-cử-viên-node. Khi đó Pi Node sẽ download Consensus image vào Docker để chạy thay PortsChecker. 
 <br>Tôi đã gặp rắc-rối ở bước này. Khi Pi Node download Consensus, nó liên-tục sinh ra các process con, lên đến hơn một trăm process. Các process con đó dùng hết bộ-nhớ của máy-tính nên tôi bấm nút trong Pi Node để ngừng việc download. Sau khi bấm nút ngừng được một lúc, khi các process con đã dần-dần chấm-dứt thì tôi thấy image Consensus đã được download vào Docker 😥.
 <br>Khi đã có Consensus image, restart lại Pi Node thì Consensus image sẽ được khởi-động, tạo database và nối vào mạng và chép các block nhưng chưa được tham-gia phê-chuẩn các giao-dịch. Ở giai-đoạn này, ứng-cử-viên-node không làm nhiều việc nên một máy-tính dưới trung-bình cũng có-thể làm, nó chỉ chép qua mạng khoảng ba gigabyte các block mỗi ngày.</p>
@@ -412,7 +412,8 @@ Tài-liệu tham-khảo:
 <br>* <a href="https://minepi.com/white-paper" target='_blank'>Pi Network White Paper</a>
 <br>* <a href="https://pinetwork.atlassian.net/servicedesk/customer/portal/1/article/33038" target='_blank'>Pi Network Community Wiki</a>
 <br>* <a href="https://www.reddit.com/r/PiNetwork/wiki/pi-wiki" target='_blank'>Reddit Pi Network</a>
-Các bài liên quan:
+<br>* <a href="https://tradevn.net/2020/huong-dan-cac-buoc-chuan-bi-chay-node-pi/" target='_blank'>Hướng-dẫn cài Pi Node</a>
+<br>Các bài liên quan:
 <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
 <br>Mọi ý-kiến thảo-luận xin ghi vào các trang: <a href="https://www.facebook.com/lamgiauchacchan/posts/1819584918207108" rel="nofollow" target="_blank">Facebook</a></div>
   <hr>
