--- a/huu-ich/cau-chuyen/bot-lo-ve-tien.html
+++ b/huu-ich/cau-chuyen/bot-lo-ve-tien.html
@@ -277,7 +277,7 @@ data-ad-slot="5275186684">
     <li>Không để dành: kiếm được bao nhiêu xài hết bấy nhiêu vì để tiền lại thì bị mất giá, uổng lắm.</li>
     <li>Đổi tiền ra vàng hay ngoại tệ.</li>
   </ol>
-  Rõ ràng là cách thứ nhất sẽ tạo ra khó khăn về sau. Khó khăn đến mức nào thì bạn có thể xem ở <a href="../tich-luy">bài này</a>.
+  Rõ ràng là cách thứ nhất sẽ tạo ra khó khăn về sau. Khó khăn đến mức nào thì bạn có thể xem ở <a href="../tich-luy">bài sau</a>.
   <br>Cách thứ hai có phải là cách hay nhất không? Mời bạn xem bài phân tích <a href="../tich-luy-dai-han">ở đây</a>.
 
   <div class="todiscuss">
