--- a/huu-ich/chi-tieu.html
+++ b/huu-ich/chi-tieu.html
@@ -318,7 +318,7 @@ data-ad-slot="5275186684">
   </div>
   <div class="center">
     <b><span>Tôi đã đạt đến Tự-do-tài-chính rồi!</span></b>
-    <br>Bạn thì sao? Hãy thử tính theo <a href="ke-hoach-tai-chinh/">cách này</a> xem sao!
+    <br>Bạn thì sao? Hãy thử tính theo <a href="ke-hoach-tai-chinh/">cách sau</a> xem sao!
   </div>
 
 
