--- a/huu-ich/thong-ke-huu-tri-tu-nguyen-my.html
+++ b/huu-ich/thong-ke-huu-tri-tu-nguyen-my.html
@@ -246,7 +246,7 @@ data-ad-slot="5275186684">
   <br>(Đó là mức tiết kiệm trung bình của xã hội Mỹ, mỗi người có cách sống khác nhau sẽ cần có mức tiết kiệm khác nhau. Để biết mức tiết kiệm cần có của chính mình thì dùng bảng tính <a href="ke-hoach-tai-chinh/">KHTC</a>.)</p>
   <p>Tỉ lệ phân bố tiền đầu tư
   <br>Những người từ 45 tuổi trở xuống để 85% tiền hưu trí vào cổ phiếu, trong khi những người từ 65 tuổi trở lên để 50% vào cổ phiếu. Những người có số dư từ một triệu USD trở lên để tới 75% vào cổ phiếu. Đối với những người sắp về hưu mà để nhiều tiền vào cổ phiếu như vậy có quá cao không? Nên nhớ rằng người ta có thể sống hơn 90 tuổi, nghĩa là chưa dùng hết tiền hưu trong vài chục năm (thì <a href="de-tien-vao-dau">để trong cổ phiếu vẫn có lợi</a>).</p>
-  <p>Người Mỹ đã để dành như vậy, người Việt Nam càng phải để dành nhiều hơn vì tiền lương hưu rất thấp hoặc không có lương hưu. Bạn hãy tính xem tổng tài sản của gia đình có tăng nhanh như hình trong trang <a href="tich-luy">này</a> không. Tài sản của gia đình không cần tính bằng USD hay cây vàng mà tính gấp bao nhiêu lần chi tiêu hàng tháng. Chỉ cần sắp xếp lại cho chi tiêu gia đình giảm một chút là tài sản sẽ tăng lên ngay.</p>
+  <p>Người Mỹ đã để dành như vậy, người Việt Nam càng phải để dành nhiều hơn vì tiền lương hưu rất thấp hoặc không có lương hưu. Bạn hãy tính xem tổng tài sản của gia đình có tăng nhanh như hình trong trang <a href="tich-luy">sau</a> không. Tài sản của gia đình không cần tính bằng USD hay cây vàng mà tính gấp bao nhiêu lần chi tiêu hàng tháng. Chỉ cần sắp xếp lại cho chi tiêu gia đình giảm một chút là tài sản sẽ tăng lên ngay.</p>
 
   <div class="todiscuss">
     Các bài liên quan:
