--- a/y-kien/muc-hay-den.html
+++ b/y-kien/muc-hay-den.html
@@ -235,7 +235,7 @@ data-ad-slot="5275186684">
 <li>mua cổ phiếu rồi phải bán đi cho nhanh, lấy tiền lời ngay,</li>
 <li>…</li>
 </ul>
-<p>Điều buồn cười là những người đó chưa bao giờ nhìn đến bảng giá cổ phiếu mà nói rất tự tin như là kinh nghiệm đầy mình. Mỗi lần như vậy, tui phải nói lại rằng kinh nghiệm đầu tư cổ phiếu 14 năm của tui khác với những điều đó, và tui nói lại những gì được viết trong <a href="/huu-ich/de-tien-vao-dau">trang web này</a>. Nhưng dường như do bị 'dính mực' nhiều quá nên 'đèn' không làm cho họ 'sáng' lên được chút nào, lần sau có dịp nói đến chủ đề cổ phiếu thì những điều ngộ nhận cũ lại được tự động bật lên! Và còn rất nhiều điều ngộ nhận khác trong mọi lĩnh vực của cuộc sống.</p>
+<p>Điều buồn cười là những người đó chưa bao giờ nhìn đến bảng giá cổ phiếu mà nói rất tự tin như là kinh nghiệm đầy mình. Mỗi lần như vậy, tui phải nói lại rằng kinh nghiệm đầu tư cổ phiếu 14 năm của tui khác với những điều đó, và tui nói lại những gì được viết trong <a href="/huu-ich/de-tien-vao-dau">trang web sau</a>. Nhưng dường như do bị 'dính mực' nhiều quá nên 'đèn' không làm cho họ 'sáng' lên được chút nào, lần sau có dịp nói đến chủ đề cổ phiếu thì những điều ngộ nhận cũ lại được tự động bật lên! Và còn rất nhiều điều ngộ nhận khác trong mọi lĩnh vực của cuộc sống.</p>
 
 <!-- AMP display ads -->
 <amp-ad width="100vw" height="320"
@@ -249,7 +249,7 @@ data-ad-slot="5275186684">
 
 <p>Như vậy điều quan trọng không phải là gần cái gì mà là khả năng phân biệt được mọi thứ. Mỗi người phải dùng chính trí tuệ của mình để phân biệt chứ không được nhờ ai khác phân biệt giùm. Không thể nghe một người đáng kính nào đó nói "đây là đèn" khi đưa ra một thứ bằng thuỷ tinh, rồi cứ thế đem về để trong nhà và nghĩ rằng nhà mình sáng hơn trăng, có ngờ đâu thứ bằng thuỷ tinh đó là lọ mực 😞</p>
 <p>Một điều cần phải phân biệt nữa là có một chỗ gần cái đèn nhưng không sáng, đó là chỗ gần cái chuôi đèn (hay đui đèn). Thấy một bóng đèn đang đưa chuôi của nó về phía mình thì đừng cố tiến lại gần nó, hãy tìm bóng đèn khác đang rọi đến chỗ mình. Nói cụ thể hơn là: mọi điều đều cần có điều kiện để áp dụng mới đúng được, nếu không có đủ điều kiện thì điều đó có thể trở thành sai.</p>
-<p>Khả năng phân biệt là một thứ cần thiết để con người tự hoàn thiện, còn những thứ khác nữa được giải thích trong <a href="/download/D%C6%B0%E1%BB%9BiCh%C3%A2nTh%E1%BA%A7y.pdf" target='_blank'>cuốn sách nhỏ này</a>. Phải thực hành phân biệt thật sớm, trước khi bị dính mực. Bị dính mực rồi thì nhìn mọi thứ đều lem nhem như nhau, khó phân biệt hơn.</p>
+<p>Khả năng phân biệt là một thứ cần thiết để con người tự hoàn thiện, còn những thứ khác nữa được giải thích trong <a href="/download/D%C6%B0%E1%BB%9BiCh%C3%A2nTh%E1%BA%A7y.pdf" target='_blank'>cuốn sách nhỏ sau</a>. Phải thực hành phân biệt thật sớm, trước khi bị dính mực. Bị dính mực rồi thì nhìn mọi thứ đều lem nhem như nhau, khó phân biệt hơn.</p>
 <div class="todiscuss">
 Các bài liên quan:
 <br>* <a href="/y-kien/">Những ý kiến khác</a>
