--- a/kinh-nghiem/may-tinh/pi-network.html
+++ b/kinh-nghiem/may-tinh/pi-network.html
@@ -327,24 +327,27 @@ Số Node sẽ tăng theo số giao-dịch để giữ cho tốc-độ xử-lý 
 <section>
 <h4 class="accordion-header">Cài Pi Node trên Windows 10</h4>
 <div>
-	<p>Máy dùng làm Pi Node cần có ít nhất 4 GB RAM, và cần phải có đĩa-cứng ít nhất 100 GB loại SSD để kịp ghi các giao dịch—mỗi giây ghi vào đĩa khoảng 400 Kbyte. Pi Node software gồm có hai phần: phần giao-diện cho người-dùng, và phần xử-lý blockchain—gọi là Consensus. Phần Consensus chạy trên Linux trong một Docker container, Docker container chạy trên Windows WSL2.<!-- Hiện nay Pi Network chỉ phát-hành phần giao-diện cho người-dùng trên Windows và Mac, chưa có trên Linux. --> Nếu bạn dùng Windows 10 Home thì bạn cần phải <a href="https://windowsloop.com/enable-wsl-windows-10-home/" target='_blank'>enable WSL</a>. Install WSL2 theo <a href="https://docs.microsoft.com/en-us/windows/wsl/install-manual#step-4---download-the-linux-kernel-update-package" target='_blank'>hướng dẫn của Microsoft</a>. Install Docker theo <a href="https://docs.docker.com/get-docker/" target='_blank'>hướng-dẫn sau</a> cũng không khó.</p>
-<p>Đầu tiên, bạn download và cài phần giao-diện cho người-dùng từ <a href="https://minepi.com/node/" target='_blank'>Pi Network</a> vào máy Windows 10. Khi mới cài Pi Node thì phần Consensus chưa được cài vào máy cho tới khi bạn chọn xin làm node. Khi đó, bạn sẽ được hướng-dẫn cài WSL, Docker vào Windows. Sau khi Docker được cài xong, software Pi Node sẽ download PortsChecker image vào Docker và yêu-cầu bạn điều-chỉnh router để từ bên ngoài có thể nối vào node qua các port 31400-31409 trên IPv4. Trong trường-hợp bạn không được quyền điều-chỉnh router, bạn vẫn có thể chạy Pi Node và được chia ít tiền hơn.
+	<p>Máy dùng làm Pi Node cần có ít nhất 4 GB RAM, và cần phải có đĩa-cứng ít nhất 100 GB (trước Tháng Mười năm 2021, Pi Node cần dùng SSD để kịp ghi các giao dịch, version sau này có-thể chạy với HDD). Pi Node software gồm có hai phần: phần giao-diện cho người-dùng, và phần xử-lý blockchain—gọi là pi-consensus. Pi-consensus chạy trên máy ảo Linux trong một Docker container, Docker container chạy trên Windows WSL2.<!-- Hiện nay Pi Network chỉ phát-hành phần giao-diện cho người-dùng trên Windows và Mac, chưa có trên Linux. --> Nếu bạn dùng Windows 10 Home thì bạn cần phải <a href="https://windowsloop.com/enable-wsl-windows-10-home/" target='_blank'>enable WSL</a>. Install WSL2 theo <a href="https://docs.microsoft.com/en-us/windows/wsl/install-manual#step-4---download-the-linux-kernel-update-package" target='_blank'>hướng dẫn của Microsoft</a>. Install Docker Desktop theo <a href="https://docs.docker.com/get-docker/" target='_blank'>hướng-dẫn sau</a> cũng không khó.</p>
+<p>Cài Docker Desktop xong, bạn cho nó chạy và dùng lệnh "wsl -l -v" để xem tình-trạng của nó. Khi cả hai distro docker-desktop và docker-desktop-data đều Running là tốt. Bây-giờ bạn download sẵn image của Pi Consensus bằng lệnh "docker image pull pinetwork/pi-node-docker:latest".
+<p>Tiếp theo, bạn download và cài phần giao-diện cho người-dùng từ <a href="https://minepi.com/node/" target='_blank'>Pi Network</a> vào máy Windows 10. Khi mới cài Pi Node thì phần Pi Consensus chưa được cài vào máy cho tới khi bạn chọn xin làm node. Khi đó, bạn sẽ được hướng-dẫn cài WSL, Docker vào Windows. Sau khi Docker được cài xong, software Pi Node sẽ download PortsChecker image vào Docker và yêu-cầu bạn điều-chỉnh router để từ bên ngoài có thể nối vào node qua các port 31400-31409 trên IPv4. Trong trường-hợp bạn không được quyền điều-chỉnh router, bạn bỏ qua việc này và bấm vào nút Continue bên dưới, bạn vẫn có thể chạy Pi Node và được chia ít tiền hơn.
 <br>Sau khi PortsChecker chạy khoảng hơn một ngày với tổng-thời-gian chạy hơn 90% thì Pi Network sẽ thông-báo rằng máy của bạn được làm ứng-cử-viên-node. Khi đó Pi Node sẽ download Consensus image vào Docker để chạy thay PortsChecker. 
-<br>Tôi đã gặp rắc-rối ở bước này. Khi Pi Node download Consensus, nó liên-tục sinh ra các process con, lên đến hơn một trăm process. Các process con đó dùng hết bộ-nhớ của máy-tính nên tôi bấm nút trong Pi Node để ngừng việc download. Sau khi bấm nút ngừng được một lúc, khi các process con đã dần-dần chấm-dứt thì tôi thấy image Consensus đã được download vào Docker 😥.
-<br>Khi đã có Consensus image, restart lại Pi Node thì Consensus image sẽ được khởi-động, tạo database và nối vào mạng và chép các block nhưng chưa được tham-gia phê-chuẩn các giao-dịch. Ở giai-đoạn này, ứng-cử-viên-node không làm nhiều việc nên một máy-tính dưới trung-bình cũng có-thể làm, nó chỉ chép qua mạng khoảng ba gigabyte các block mỗi ngày.</p>
+<br>Tôi đã gặp rắc-rối ở bước này. Khi Pi Node download Consensus, nó liên-tục sinh ra các process con, lên đến hơn một trăm process. Các process con đó dùng hết bộ-nhớ của máy-tính nên tôi bấm nút trong Pi Node để ngừng việc download. Sau khi bấm nút ngừng được một lúc, khi các process con đã dần-dần chấm-dứt thì tôi thấy image pi-node-docker đã được download vào Docker 😥.
+<br>Khi đã có pi-node-docker image, restart lại Pi Node thì Consensus container sẽ được khởi-động, tạo database và nối vào mạng và chép các block nhưng chưa được tham-gia phê-chuẩn các giao-dịch. Trong vài giờ đầu tiên, pi-consensus chép lại tất-cả các block đã có từ server của Pi Network. Ở giai-đoạn này, ứng-cử-viên-node không làm nhiều việc nên một máy-tính dưới trung-bình cũng có-thể làm, nó chỉ chép qua mạng khoảng ba gigabyte các block mỗi ngày.</p>
 <p>Một rắc-rối khác mà tôi đã gặp phải khi khởi-động Consensus. Consensus trong máy laptop của tôi liên-tục bị lỗi khi tạo database dù đã cố thử nhiều lần. Tôi chép nguyên đĩa-cứng chứa Windows và Pi Node sang một đĩa-cứng khác cho chạy trong máy desktop. Consensus khởi-động thành-công trên máy desktop và chép được hơn ba trăm ngàn block. Để tiết-kiệm điện, tôi lại chép Windows và Pi Node vào một đĩa-cứng 2,5 inch khác để gắn vào máy laptop. Máy laptop chỉ tốn điện bằng ⅓ so với máy desktop.</p>
 <h5 id="chinh_may">Chỉnh máy</h5>
 <p>Để máy chạy Pi Node tốt hơn, chúng ta phải chỉnh vài chỗ.</p>
 <h6>RAM</h6>
-Máy-ảo Consensus chỉ cần khoảng 700 MB để chạy các process và thêm khoảng vài trăm megabyte làm cache file. RAM để cache file trong máy-ảo là một sự lãng-phí vì file trong máy-ảo cũng được chứa trong đĩa-cứng của máy-thật và được máy-thật cache trong RAM tức là mỗi file được giữ hai nơi trong RAM. Sự lãng-phí đó có-thể tránh khỏi bằng cách dùng tool nocache trong máy-ảo, việc này phải do những người làm ra image Consensus làm. Tôi đã gửi ý kiến này đến Pi Core Team. Trong khi chờ đợi nocache thì phải chỉnh WSL để tiết kiệm RAM. Windows mặc nhiên cho phép máy-ảo dùng đến 50% RAM của máy-thật. Để giảm lượng RAM cho máy-ảo thì tạo file config theo hướng dẫn ở <a href="https://docs.microsoft.com/en-us/windows/wsl/wsl-config#configure-global-options-with-wslconfig" target='_blank'>Microsoft</a>. Đơn vị memory dùng trong file config đó là MB hoặc GB, tôi cho máy-ảo dùng 1500 MB memory và 1 GB swap. Nếu bạn có từ 4 GB RAM trở xuống thì bạn có thể cho memory = 1 GB, khi đó máy-ảo Consensus dùng khoảng 200 MB swap, đó là những vùng memory ít dùng tới. 200 MB đó được ghi vào một file trong Windows.</p>
-<h6>Antivirus</h6>
-Chương-trình antivirus của Microsoft là Windows Security rất hao CPU. Tôi cài Avast vào để đỡ hao.
+Máy-ảo Consensus chỉ cần khoảng 700 MB để chạy các process và thêm khoảng vài trăm megabyte làm cache file. RAM để cache file trong máy-ảo là một sự lãng-phí vì file trong máy-ảo cũng được chứa trong đĩa-cứng của máy-thật và được máy-thật cache trong RAM tức là mỗi file được giữ hai nơi trong RAM. Sự lãng-phí đó có-thể tránh khỏi bằng cách dùng tool nocache trong máy-ảo, việc này phải do những người làm ra image Consensus làm. Tôi đã gửi ý kiến này đến Pi Core Team. Trong khi chờ đợi nocache thì phải chỉnh WSL để tiết kiệm RAM. Windows mặc nhiên cho phép máy-ảo dùng đến 50% RAM của máy-thật. Để giảm lượng RAM cho máy-ảo thì tạo file config theo hướng dẫn ở <a href="https://docs.microsoft.com/en-us/windows/wsl/wsl-config#configure-global-options-with-wslconfig" target='_blank'>Microsoft</a>. Đơn vị memory dùng trong file config đó là MB hoặc GB, tôi cho máy-ảo dùng 1250 MB memory và 1 GB swap, khi đó máy-ảo Consensus dùng khoảng 200 MB swap, đó là những vùng memory ít dùng tới. 200 MB đó được ghi vào một file trong Windows.</p>
 <h6>Đĩa-cứng</h6>
 Máy-ảo Consensus liên-tục nhận được các block chứa giao-dịch mới và ghi vào database. Việc ghi đĩa nhiều lần làm ảnh-hưởng đến hoạt-động của máy, để giảm số lần ghi đĩa xuống thì mở Device Manager của Windows, bấm vào dấu-hiệu bên trái Disk drives để hiện ra tất cả các ổ-đĩa, chọn ổ-đĩa-cứng rồi bấm Enter để mở Properties của ổ-đĩa đó. Chọn tab Policies, trong đó chọn "Enable write caching on the device" (default Windows đã chọn rồi), và chọn tiếp "Turn off Windows write cache buffer flushing on the device".
 <br>Nếu máy có nhiều ổ-đĩa-cứng thì chỉnh hết trên tất cả các ổ đĩa, nhưng đừng chỉnh trên những đĩa USB.
 <br>Tác-dụng của việc chỉnh này là không cho Windows thường-xuyên ghi nội-dung trong cache vào đĩa, mà chỉ ghi khi hết chỗ để cache trong RAM.
 Tác-dụng càng rõ trên những máy có ổ-đĩa chậm. Trên máy laptop của tôi gắn HDD, sau khi chỉnh thì Active time đã giảm từ 50%-100% xuống chỉ còn 10%-15%.
 <br>Rủi-ro của việc này là khi máy bị mất điện thì có thể bị hư file.
+<h6>Tắt bớt các service của Windows</h6>
+<p>Các service có-thể tắt là Windows Search, Bluetooth, Print Spooler, SysMain, Themes.</p>
+<h6>Antivirus</h6>
+Chương-trình antivirus của Microsoft là Windows Security rất hao CPU. Tôi cài Avast vào để đỡ hao. Sau-đó tôi tắt luôn antivirus.
 </div>
 </section>
 </amp-accordion>
@@ -439,35 +442,6 @@ Tài-liệu tham-khảo:
   Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
-
-<amp-analytics>
-  <script type="application/json">
-    {
-      "requests": {
-        "pageview": "https://c.statcounter.com/12598906/0/9a8e736a/1/"
-      },
-      "triggers": {
-        "trackPageview": {
-          "on": "visible",
-          "request": "pageview"
-        }
-      }
-    }
-  </script>
-</amp-analytics>
-<amp-analytics type="googleanalytics">
-  <script type="application/json">
-  {
-  "vars": { "account": "UA-25268996-1" },
-  "triggers": {
-  "trackPageview": {
-  "on": "visible",
-  "request": "pageview"
-    }
-   }
-  }
-  </script>
-</amp-analytics>
 
 </main>
 </body>
