--- a/kinh-nghiem/may-tinh/protect.html
+++ b/kinh-nghiem/may-tinh/protect.html
@@ -289,6 +289,7 @@ Dàn bài:
 <br>Để dùng như vậy bạn hãy chép file KeePass của bạn vào một cloud storage, đồng-bộ giữa cloud và tất cả các máy tính, mở file đó từ cloud strorage bằng app KeePass trong smartphone.
 <br>Chú-ý: bạn cần phải đồng-bộ database với cloud storage ngay sau khi sửa ở một máy để tránh bị mất thông tin, xem thêm trong bài <a href="cloudstorage">Kinh nghiệm dùng cloud storage</a>.</p>
 <p>Tôi đang dùng phần mềm KeePass để giữ tất cả thông tin như vậy. Để tiện dùng những thông tin đó mọi lúc và mọi nơi, tôi để file KeePass database của tôi trong một <a href="cloudstorage">cloud storage</a> và đồng-bộ nó về máy tính cũng như smartphone. Mặc dù để file KeePass trong Internet nhưng tôi không lo ngại gì hết vì kẻ gian phải qua hai lớp khoá mới lấy được file đó: password của cloud storage và password của file đó (ai mà biết được tôi thích câu thơ nào).</p>
+<p>Nếu bạn chỉ dùng một máy smartphone (không có máy-tính), bạn cũng nên để file KeePass của bạn trong cloud storage để tránh rủi-ro hư hoặc mất smartphone. Ngay khi tạo file KeePass, bạn hãy chọn tạo file trong cloud strorage.</p>
 <h5>KeePass trong Android</h5>
 <p>Khi dùng app KeePass trong smartphone Android, bạn không cần copy và paste. App tạo ra sẵn một bàn phím ảo, bàn phím ảo này tự động chứa các mục của entry bạn đang mở trong KeePass. Ví-dụ bạn cần login vào website Dynv6 từ smartphone, bạn làm theo các bước:</p>
 <ol>
