--- a/kinh-nghiem/may-tinh/pi-network.html
+++ b/kinh-nghiem/may-tinh/pi-network.html
@@ -280,7 +280,7 @@ data-ad-slot="5275186684">
 Pi xuất-hiện vào ngày 14-03-2019 với server tập-trung. Trong giai-đoạn này người tham-gia nhận được π vào tài-khoản nhưng không chuyển-khoản sang tài-khoản khác được. 
 <h4>Giai-đoạn 2: Thử-nghiệm</h4>
 Đúng một năm sau ngày được giới-thiệu, Pi Network chuyển sang giai-đoạn hai với sự xuất-hiện các node phân-tán trong Internet. Lúc đó Pi đã có hơn 3,5 triệu người tham-gia. Một số tài-khoản Pi được xác-thực danh-tính để được phép chuyển-khoản với nhau để mua-bán hàng-hoá.
-<p>Hiện-nay Pi Network đang trong giai-đoạn hai với hơn 18 triệu thành-viên và chuẩn-bị chuyển sang giai-đoạn ba. Chợ-điện-tử <a href="https://pinetworkmarket.com" target='_blank'>PiNetworkMarket</a> đang được xây-dựng để làm nơi bán hàng nhận tiền π và đổi tiền π ra các loại tiền khác.</p>
+<p>Hiện-nay Pi Network đang trong giai-đoạn hai với hơn 18 triệu thành-viên và chuẩn-bị chuyển sang giai-đoạn ba. Chợ-điện-tử PiNetworkMarket đang được xây-dựng để làm nơi bán hàng nhận tiền π và đổi tiền π ra các loại tiền khác.</p>
 <h4>Giai-đoạn 3: Chính-thức</h4>
 Hệ-thống hoạt-động hoàn-chỉnh khi đã có khoảng vài chục triệu người trên thế-giới có π. Mọi tài-khoản sẽ được xác-thực danh-tính để sử-dụng <a href="vi-dien-tu">ví-điện-tử</a>.
 <p>Chiến-lược phát-triển Pi qua ba giai-đoạn như vậy rất xuất-sắc: mở rộng thị-trường ra khắp thế-giới nhưng không tốn chi-phí tiếp-thị và khuyến-mại, trong khi các ví-điện-tử MoMo, ZaloPay, AliPay, WeChat Pay tốn hàng triệu USD để phát-triển thị-trường. MoMo trả cho người giới-thiệu khách-hàng mới từ 100 ngàn đồng đến 500 ngàn đồng. Pi Network không tốn đồng nào để mời thêm người, người mời vẫn được thưởng từ giá trị của π do hàng chục triệu người cùng nhau công nhận.</p>
@@ -399,7 +399,7 @@ Pi Network chỉ trả công khi bạn mời được người tham-gia và ngư
 </div>
 <div class="even">Tại-sao phải nhập số-điện-thoại, tên thật và xác-thực danh-tính khi tham-gia Pi Network?
 <blockquote>
-Pi Network chỉ trả-công cho những người có thật, và mỗi người chỉ nhận được tiền công ở một ví-điện-tử. Để loại-trừ những trường-hợp một người tạo nhiều ví-điện-tử trên nhiều máy-điện-thoại để nhận nhiều tiền, Pi Network yêu-cầu dùng tên thật và xác-thực danh-tính của người chủ ví-điện-tử. Đây chính là điểm khác giữa π và các loại tiền-điện-tử trước đây.
+Pi Network chỉ trả-công cho những người có thật, và mỗi người chỉ nhận được tiền công ở một ví-điện-tử. Để loại-trừ những trường-hợp một người tạo nhiều ví-điện-tử trên nhiều máy-điện-thoại để nhận nhiều tiền, Pi Network yêu-cầu dùng tên thật và xác-thực danh-tính của người chủ ví-điện-tử. Ngoài-ra Pi Network thuộc về Pi Community Company là một công-ty hoạt-động theo luật-pháp và công-ty phải biết rõ ai đang giao-dịch. Đây chính là điểm khác giữa π và các loại tiền-điện-tử trước đây.
 </blockquote>
 </div>
 <div>Nhiều người cho rằng Pi Network thu-thập thông-tin cá-nhân làm lợi riêng.
@@ -417,11 +417,12 @@ Pi Network chỉ trả-công cho những người có thật, và mỗi người
 <br>Sự-thật là Pi Network đã công-bố mã-nguồn để cộng-đồng giám-sát, chưa có tuyên-bố nào về sự mờ-ám trong <a href="https://github.com/PiCoreTeam/pi-node-docker" target='_blank'>mã-nguồn của Pi</a>. Giả-sử Pi Network bị phát-hiện là không an-toàn, bạn ngừng tham-gia, bạn cũng không bị mất gì ngoài 10 giây mỗi ngày trong thời-gian trước đó. Tất-nhiên là Pi Network Core Team phải làm hết sức để Pi Network không thất-bại, vì họ là những người chịu tốn-kém nhiều nhất trong dự-án này.
 </blockquote>
 </div>
-<div>Mất tiền π trong ví-điện-tử?
+<div class="even">Mất tiền π trong ví-điện-tử?
 <blockquote>Đây là một rủi-ro có thật, nhất là khi π đã có giá-trị (giai đoạn 3)!
 <br>Ví-điện-tử không giống như ví tiền thông thường mà có phần giống như tài-khoản ngân-hàng. Với ví tiền thông thường, bạn dùng tay mở ví, rút tiền ra đưa cho người trước mặt. Với tài-khoản ngân-hàng, bạn ra lệnh cho ngân-hàng rút tiền ra đưa cho người khác. Để ra lệnh cho ngân-hàng thì bạn phải chứng-tỏ bạn là chủ tài-khoản bằng cách trình căn-cước, hoặc gõ mật-khẩu. Với ví-điện-tử blockchain thì bạn phải gõ passphrase (hoặc private key, passphrase là private key được đổi thành những từ có nghĩa) để chuyển tiền. Khi bạn bị lộ mật-khẩu của tài-khoản ngân-hàng hoặc lộ passphrase của ví-điện-tử thì bạn mất tiền. Khi bạn bị quên mật-khẩu của tài-khoản ngân-hàng thì bạn có thể đến ngân-hàng trình căn-cước và nhờ nhân-viên ngân-hàng thay mật-khẩu mới.
 <br><b>Passphrase hoặc Private key của ví-điện-tử blockchain thì không thể thay được.</b> 
 Có những loại ví-điện-tử blockchain thuộc loại custodial: có một server giữ private key giùm bạn. Khi bạn quên private key, bạn phải chứng-tỏ bạn là chủ của ví-điện-tử đó để server gửi private key cho bạn. Ví-điện-tử chứa π là loại ví non-custodial: không có bất-kỳ ai ngoài bạn giữ private key của ví của bạn. Khi bạn quên private key, không ai có thể giúp bạn nhớ lại được. Vì vậy, bạn phải ghi lại private key và cất kỹ để có thể lấy ra dùng khi cần và không để lộ cho bất-kỳ người nào biết. Để ghi và cất như vậy, bạn có thể làm theo <a href="protect">kinh-nghiệm của tôi</a>.
+<br>Ví-điện-tử blockchain khác với tài-khoản ngân-hàng ở một điểm quan-trọng là "không cần biết địa-chỉ ví, chỉ cần passphrase là lấy được tiền ra khỏi ví". Không cần biết địa-chỉ ví và cũng không cần biết ví đó thuộc blockchain nào trong hàng ngàn loại tiền-điện-tử blockchain. Người ta chỉ cần lần-lượt thử passphrase đó với những blockchain có giá trị đến khi thấy có tiền hiện ra và chuyển số tiền đó sang ví khác.
 </blockquote>
 </div>
 
