--- a/kinh-nghiem/may-tinh/spam-call.html
+++ b/kinh-nghiem/may-tinh/spam-call.html
@@ -3,7 +3,7 @@
 <head>
 <title>Chặn những cuộc gọi tiếp thị</title>
 <meta name="description" content="Chặn những cuộc gọi tiếp thị bằng sự hợp tác trong đám mây" />
-<meta name="keywords" content="spam, truecaller, showcaller,  sms, email">
+<meta name="keywords" content="spam, truecaller, sms, email">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/spam-call">
 
 <!-- in head of html file -->
@@ -252,16 +252,16 @@ Chúng ta có mắng chửi hay đề nghị người gọi xoá số thì vẫn
 
   <h2>Đưa spammer vào đám mây</h2>
   <div class="flright"><amp-img alt="Màn hình app Showcaller" src="/images/BlockedCall.jpg" width="360" height="240" layout="responsive"></amp-img></div>
-  <p>Truecaller và <a href="https://www.show-caller.com/" target='_blank'>Showcaller</a> là những app để chống những cuộc gọi tiếp thị không mong muốn bằng sự hợp tác trong cộng đồng. App này cho phép gắn thêm thông tin vào mỗi số điện thoại: tên và dấu spam.
+  <p>Truecaller và Showcaller là những app để chống những cuộc gọi tiếp thị không mong muốn bằng sự hợp tác trong cộng đồng. App này cho phép gắn thêm thông tin vào mỗi số điện thoại: tên và dấu spam.
   <br>Điều đặc biệt là tất cả thông tin được tập trung lại trong server trong Internet mà không hề làm rối sổ điện thoại cá nhân của người dùng. Khi tôi gắn tên 'An BĐS' cho một số điện thoại rồi thì khi An gọi đến một người khác có dùng app thì tên 'An BĐS' sẽ tự hiện ra (nếu máy điện thoại người bị gọi đang nối mạng, tốt nhất là Wi-Fi vì mobile Internet có thể bị gián đoạn khi nhận cuộc gọi) và người bị gọi sẽ không trả lời khi thấy chữ BĐS. Nếu một số điện thoại bị đánh dấu là spam bởi 10 người dùng sẽ tự động bị chặn ở tất cả mọi người dùng. Từng người dùng có thể bỏ chặn những spammer cụ thể, ví dụ tôi không chặn số điện thoại của ngân hàng mà tôi có tài khoản mặc dù số đó bị xếp vào spammer.</p>
-  <p>Sau hơn hai năm dùng Truecaller, tôi chuyển sang dùng Showcaller vì nó gọn nhẹ hơn.</p>
-  <p>Hãy cài Showcaller vào và bỏ vài giây ghi tên và đánh dấu spam cho những cuộc gọi không mong muốn. Hơn hai năm qua, tôi đã đặt tên cho hàng ngàn số đó với các chữ rất dễ nhận như là 'BĐS', 'Dai Ichi', 'Tín dụng', 'Chứng Khoán Mỹ', 'Hotel'. Nên ghi ngành kinh doanh trong tên để mọi người dễ nhận biết mục đích người gọi, đừng ghi những chữ chung chung như 'Quấy rối', 'Phiền phức', 'Mất lịch sự'. Showcaller có chỗ để người dùng ghi chú vào từng số điện thoại, chúng ta có thể ghi nhiều thông tin hơn vài chữ ngắn ngủi trong tên.</p>
-  <p>Ngay khi mới cài Showcaller, bạn đã được chặn các cuộc gọi từ hàng ngàn spammer có sẵn trong server Showcaller. Danh sách các spammer ở Việt Nam có các số gọi giới thiệu bất động sản, ngân hàng, bảo hiểm, phòng tập thể dục, cho vay, thẻ thành viên khách sạn…</p>
+  <p>Hãy cài Truecaller vào và bỏ vài giây ghi tên và đánh dấu spam cho những cuộc gọi không mong muốn. Hơn hai năm qua, tôi đã đặt tên cho hàng ngàn số đó với các chữ rất dễ nhận như là 'BĐS', 'Dai Ichi', 'Tín dụng', 'Chứng Khoán Mỹ', 'Hotel'. Nên ghi ngành kinh doanh trong tên để mọi người dễ nhận biết mục đích người gọi, đừng ghi những chữ chung chung như 'Quấy rối', 'Phiền phức', 'Mất lịch sự'. Truecaller có chỗ để người dùng ghi chú vào từng số điện thoại, chúng ta có thể ghi nhiều thông tin hơn vài chữ ngắn ngủi trong tên.</p>
+  <p>Ngay khi mới cài Truecaller, bạn đã được chặn các cuộc gọi từ hàng ngàn spammer có sẵn trong server Truecaller. Danh sách các spammer ở Việt Nam có các số gọi giới thiệu bất động sản, ngân hàng, bảo hiểm, phòng tập thể dục, cho vay, thẻ thành viên khách sạn…</p>
   <h2>Và hơn nữa</h2>
   <p>Để cho những số điện thoại spam mau trở thành spammer, chúng ta hãy cùng nhau chia sẻ những số spam mà mình đã báo cáo. Một người nhận được cuộc gọi spam xong, đánh dấu số đó là spam và gửi vào mạng xã hội <a href="https://www.facebook.com/boi.hong.le/posts/1118587198233629" target='_blank'>Facebook</a> cùng với mô tả về người gọi (tiếp thị ngành gì, tên gì…), nhiều người khác cùng đánh dấu nó là spam ngay cả khi chưa bị gọi.
   <br>Nếu chịu khó hơn nữa, mỗi khi nhận được SMS hoặc email tiếp thị, ngoài việc đánh dấu đó là thư rác, các bạn mở ra xem và lấy các số điện thoại trong đó ra để báo cáo là số spam. Chính các số điện thoại trong email, SMS mới là số điện thoại spammer dùng nhiều nhất, còn số gửi SMS chỉ là số gửi thuê. Nhiều người cùng làm như vậy thì sẽ đến lúc những người phát tán thông tin tiếp thị không mong muốn sẽ nhận được kết quả là số điện thoại của họ gọi đi đâu cũng chỉ nghe tín hiệu bận. Những số điện thoại thường dùng là số đã được lựa chọn, số đẹp. Nếu người chủ của số đẹp đó biết rằng hành động spam sẽ bị trả giá bằng việc số đẹp của họ bị chặn ở nhiều nơi thì họ sẽ ngừng spam.
   <br>Các spammer thường dùng một số điện thoại khác để gọi, ngoài số chính của họ. Các số điện thoại đó cũng sẽ nhanh chóng bị chặn nếu cộng đồng chống spam tích cực. Tóm lại là, nếu chúng ta cùng tích cực ngăn chặn thì sự lạm dụng sẽ bị vô hiệu hoá.</p>
-
+  <h2>Truecaller trên iPhone</h2>
+  <p>Sau khi cài Truecaller vào iPhone, bạn phải cấp quyền cho nó thì nó mới nhận được những cú điện thoại gọi đến. Cách cấp quyền được ghi trong trang <a href="https://quantrimang.com/cong-nghe/kich-hoat-truecaller-tren-iphone-186285" target='_blank'>web sau</a>.
 
 <!-- AMP display ads -->
 <amp-ad width="100vw" height="320"
@@ -288,8 +288,7 @@ Chúng ta có mắng chửi hay đề nghị người gọi xoá số thì vẫn
     <li>quay trở lại màn hình App Info, chọn Force Stop,</li>
     <li>quay trở lại màn hình Home, chạy Truecaller. Nếu Truecaller hỏi bạn có muốn restore data từ đám mây thì hãy chọn Skip. Truecaller sẽ đọc thông tin các cuộc gọi đang lưu trong máy và tìm tên của từng số từ đám mây để tạo lại một Identified Contacts list và Block list mới, nhỏ hơn trước khi bị xoá.
   </ol>
-  <p>Tôi vừa xoá data của Truecaller trong máy theo cách trên. Trước khi xoá, Truecaller có hơn 20 MB data. Sau khi xoá, Truecaller tạo lại khoảng 5 MB data, Block list chứa 250 số, mọi việc tìm và sửa được làm nhanh như chớp.
-  <br>P.S. Tôi đã chuyển sang dùng <a href="https://www.show-caller.com/" target='_blank'>Showcaller</a> vì nó gọn nhẹ hơn Truecaller.</p>
+  <p>Tôi vừa xoá data của Truecaller trong máy theo cách trên. Trước khi xoá, Truecaller có hơn 20 MB data. Sau khi xoá, Truecaller tạo lại khoảng 5 MB data, Block list chứa 250 số, mọi việc tìm và sửa được làm nhanh như chớp.</p>
   </div>
 </section>
 </amp-accordion>
@@ -313,35 +312,6 @@ Chúng ta có mắng chửi hay đề nghị người gọi xoá số thì vẫn
   Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
-
-<amp-analytics>
-  <script type="application/json">
-    {
-      "requests": {
-        "pageview": "https://c.statcounter.com/12598906/0/9a8e736a/1/"
-      },
-      "triggers": {
-        "trackPageview": {
-          "on": "visible",
-          "request": "pageview"
-        }
-      }
-    }
-  </script>
-</amp-analytics>
-<amp-analytics type="googleanalytics">
-  <script type="application/json">
-  {
-  "vars": { "account": "UA-25268996-1" },
-  "triggers": {
-  "trackPageview": {
-  "on": "visible",
-  "request": "pageview"
-    }
-   }
-  }
-  </script>
-</amp-analytics>
 
 </main>
 </body>
