--- a/sitemap.html
+++ b/sitemap.html
@@ -231,6 +231,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
       <a href="/kinh-nghiem/linh-tinh/can-biet">Những điều NÊN và KHÔNG NÊN làm trong thời Internet</a><br>
       <a href='/kinh-nghiem/linh-tinh/bep'>So sánh chi phí giữa dùng bếp-ga—bếp-điện-cảm-ứng—lò-microwave</a><br>
+      <a href='/kinh-nghiem/linh-tinh/dia-chi'>Địa-chỉ-số ở Việt-Nam và các nước khác</a><br>
       <a href='/kinh-nghiem/linh-tinh/ac-dc'>Điện một chiều và điện xoay chiều</a><br>
       <a href='/kinh-nghiem/linh-tinh/tieu-thu-dien'>Đo công suất tiêu thụ điện một số máy nhỏ thường gặp</a><br>
       <a href='/kinh-nghiem/linh-tinh/dien-standby'>Điện standby tốn bao nhiêu?</a><br>
@@ -239,7 +240,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <a href='/kinh-nghiem/linh-tinh/lau-nha'>Cách lau-nhà cho sạch đều khắp nhà</a><br>
       <a href='/kinh-nghiem/linh-tinh/may-lanh'>Hiểu rõ Máy lạnh</a><br>
       <a href='/kinh-nghiem/linh-tinh/nong'>Bàn về tình trạng nóng</a><br>
-      <a href='/kinh-nghiem/linh-tinh/CBDC'>Tìm-hiểu Tiền-điện-tử do chính-phủ phát-hành</a></dt>
+      <a href='/kinh-nghiem/linh-tinh/CBDC'>Tìm-hiểu Tiền-điện-tử do chính-phủ phát-hành</a><br>
       <a href='/kinh-nghiem/linh-tinh/nhiet-do'>Nhiệt độ suốt ngày ở Sài Gòn</a><br>
       <a href='/kinh-nghiem/linh-tinh/tan-so-cua-tv'>Tần số của TV</a><br>
       <a href='/kinh-nghiem/linh-tinh/hong-ngoai'>Chơi với tia hồng ngoại</a>
