--- a/kinh-nghiem/linh-tinh/dia-chi.html
+++ b/kinh-nghiem/linh-tinh/dia-chi.html
@@ -224,9 +224,9 @@ data-ad-slot="5275186684">
   </div>
 
     <h1>Địa-chỉ-số ở Việt-Nam và các nước khác</h1>
-<div class="right">Viết lần đầu trong Tháng Mười, 2022.</div>
+<div class="right">Viết lần đầu trong Tháng Chín, 2022.</div>
 <!-- body here -->
-<p>Theo thông-lệ ở các nước phát-triển thì địa-chỉ gồm có số-nhà, tên-đường, tên đơn-vị hành-chính cấp thành-phố hoặc thị-trấn và mã-bưu-chính. <a href="https://en.wikipedia.org/wiki/Postal_code" target='_blank'>Mã-bưu-chính</a> đã bắt-đầu được dùng từ những năm 194x và dần-dần trở nên phổ-biến ở các nước phát-triển. Mã-bưu-chính là một dãy năm hoặc sáu chữ-cái và chữ-số, được dùng để chỉ một khu-vực hoạt-động của một bưu-cục cấp thấp, mã-bưu-chính cũng được dùng để đặt cho một địa-điểm có nhiều thư-từ như một doanh-nghiệp lớn, một cơ-quan quan-trọng. Singapore còn đặt cho mỗi toà-nhà trong khu-chung-cư một mã-bưu-chính riêng gồm sáu chữ-số.</p>
+<p>Theo thông-lệ ở các nước phát-triển thì địa-chỉ gồm có số-nhà, tên-đường, tên đơn-vị hành-chính cấp thành-phố hoặc thị-trấn và mã-bưu-chính. <a href="https://en.wikipedia.org/wiki/Postal_code" target='_blank'>Mã-bưu-chính</a> đã bắt-đầu được dùng từ những năm 194x và dần-dần trở nên phổ-biến ở các nước phát-triển. Mã-bưu-chính là một dãy năm hoặc sáu chữ-cái và chữ-số, được dùng để chỉ một khu-vực hoạt-động của một bưu-cục cấp thấp, mã-bưu-chính cũng được dùng để đặt cho một địa-điểm có nhiều thư-từ như một doanh-nghiệp lớn, một cơ-quan quan-trọng. Singapore còn đặt cho mỗi toà-nhà trong khu-chung-cư một mã-bưu-chính riêng gồm sáu chữ-số. Mã-bưu-chính giúp cho việc chuyển thư nhanh và chính-xác hơn.</p>
 <div class="flright"><amp-img alt="bảng số nhà" src="/images/dia-chi.png" width="768" height="432" layout="responsive"></amp-img></div>
 <p>Việt-Nam cũng đã có quy-định về mã-bưu-chính từ rất lâu nhưng rất ít người quan-tâm đến mã-bưu-chính. Hiện-nay mã-bưu-chính ở Việt-Nam gồm năm chữ-số, mỗi phường/xã có một mã-bưu-chính. Do mã-bưu-chính chưa được dùng phổ-biến nên địa-chỉ ở Việt-Nam rất dài, gồm có số-nhà, tên-đường, tên ba cấp đơn-vị hành-chính từ phường/xã đến tỉnh/thành-phố, ở nông-thôn thì tên thôn/ấp thay cho số-nhà và tên-đường.
 <br>Địa-chỉ ở Việt-Nam không-những dài mà-còn không chính-xác, biết địa-chỉ nhưng chưa-chắc đã đến được đúng nơi mang địa-chỉ đó.</p>
@@ -236,21 +236,21 @@ data-ad-slot="5275186684">
 <ul>
 <li>nhà ở những vùng nông-thôn thường không có số lẫn không có tên đường</li>
 <li>những đường mới mở thường không có tên đường chính-thức mà được đặt tạm bằng số rất dễ trùng, hoặc dân trong vùng gọi theo thói quen như là 'kênh nước đen', 'sin co', 'xtt 8'…</li>
-<li>nhà ở trên những đường mới mở cũng tự đặt số không theo thứ tự</li>
+<li>nhà ở trên những đường mới mở cũng mang số tự đặt không theo thứ tự</li>
 <li>trùng số trên một con-đường dài qua nhiều địa-phận hành-chính, mỗi nơi tự đánh-số nên trùng với nơi khác</li>
 <li>những con-đường có cùng tên ở các quận/huyện khác nhau</li>
 <li>việc đổi tên đường qua thời-gian</li>
 </ul>
-<p>Với hiện-trạng này thì công-cụ bản-đồ Google Maps cũng không thể chỉ đường chính-xác trong mọi trường-hợp.
+<p>Với hiện-trạng này thì công-cụ bản-đồ <a hred="../may-tinh/googlemaps">Google Maps</a> cũng không thể chỉ đường chính-xác trong mọi trường-hợp.
 <br>Rất khó để cải-thiện tình-trạng này vì những trở-ngại dưới đây.</p>
 
 <h2>Những trở-ngại trong việc điều-chỉnh số-nhà</h2>
 <p>Theo quy-định của pháp-luật hiện-hành thì số-nhà do phòng quản-lý đô-thị quận/huyện quản-lý và uỷ-ban nhân-dân quận/huyện cấp giấy-chứng-nhận. Tuy-nhiên cơ-quan nhà-nước không-thể quản-lý hết mọi số-nhà vì thiếu sự hợp-tác của dân-chúng và những khó-khăn khách-quan. Những căn-nhà không có hồ-sơ hợp-lệ sẽ không-thể xin giấy-chứng-nhận nên không có số-nhà chính-xác. Đến khi căn-nhà được hợp-thức-hoá rồi thì chủ-nhà không ý-thức được sự-cần-thiết nên không xin điều-chỉnh số-nhà.</p>
 <p>Các cơ-quan nhà-nước thường chậm-trễ trong việc đặt tên đường mới, dẫn đến sự-tồn-tại của những tên đường không chính-thức. Hoặc việc đặt tên đường bằng số gây trùng quá nhiều, trong cùng một phường có vài con đường cùng số, tất-cả địa-chỉ ở đó đều hợp-lệ nhưng rất khó tìm đến đúng nơi.</p>
-<p>Do những lý-do trên, hiện-nay rất nhiều căn-nhà mang địa-chỉ không chính-xác, nhiều đến mức không thể điều-chỉnh hết được.</p>
+<p>Do những lý-do trên, hiện-nay rất nhiều căn-nhà mang địa-chỉ không chính-xác, nhiều đến mức không thể điều-chỉnh hết được. Không-những có quá nhiều địa-chỉ phải sửa, việc sửa địa-chỉ rất tốn-kém cho người ở địa-chỉ bị sửa.</p>
 
 <h2>Tránh những trở-ngại trên bằng công-nghệ mới</h2>
-<p>Mỗi căn-nhà hoặc một khu-đất, dù cho mang địa-chỉ hợp-lệ hay không, dù cho ở đô-thị hay nông-thôn, đều có một tính-chất bất-biến, đó là toạ-độ địa-lý của những lối-ra-vào của nó. Toạ-độ địa-lý là kinh-độ và vĩ-độ. Hiện-nay với những hệ-thống định-vị bằng vệ-tinh GPS, Galileo, Beidou, Glonass, và smartphone, mọi-người có-thể-dễ-dàng biết được toạ-độ địa-lý của nơi đang đứng, miễn-là có-thể nhìn thấy bầu-trời đủ rộng để nhận được sóng từ các vệ-tinh. Dạng gốc của toạ-độ địa-lý rất dài và khó nhớ, ví-dụ như toạ-độ của cửa Nam chợ Bến-Thành là <i>vĩ-độ 10.772072747363016 Bắc và kinh-độ 106.6982751788023 Đông</i>, hoặc viết theo cách khác là <i>vĩ-độ 10°46'19.462" và kinh-độ 106°41'53.79"</i>.
+<p>Mỗi căn-nhà hoặc một khu-đất, dù cho mang địa-chỉ hợp-lệ hay không, dù cho ở đô-thị hay nông-thôn, đều có một tính-chất <b>bất-biến</b>, đó là <i>toạ-độ địa-lý</i> của những lối-ra-vào của nó. Toạ-độ địa-lý là kinh-độ và vĩ-độ. Hiện-nay với những hệ-thống định-vị bằng vệ-tinh GPS, Galileo, Beidou, Glonass, và smartphone, mọi-người có-thể-dễ-dàng biết được toạ-độ địa-lý của nơi đang đứng, miễn-là có-thể nhìn thấy bầu-trời đủ rộng để nhận được sóng từ các vệ-tinh. Dạng gốc của toạ-độ địa-lý rất dài và khó nhớ, ví-dụ như toạ-độ của cửa Nam chợ Bến-Thành là <i>vĩ-độ 10.772072747363016 và kinh-độ 106.6982751788023</i>, hoặc viết theo cách khác là <i>vĩ-độ 10°46'19.462" Bắc và kinh-độ 106°41'53.79" Đông</i>.
 <br>Để dễ nhớ hơn, người-ta nghĩ ra việc chia bề-mặt Trái-Đất ra các ô-vuông nhỏ và đánh số từng ô-vuông đó, rồi đổi số đó ra một dạng ngắn-gọn hoặc dễ-nhớ hơn. Công-ty What3words chọn kích-thước mỗi ô-vuông là ba mét và mỗi ô-vuông được mang một tên gồm ba từ, ví-dụ cửa Nam chợ Bến-Thành được gọi là <a href="https://what3words.com/quitter.workouts.wardrobe" target='_blank'>///quitter.workouts.wardrobe</a> trong tiếng Anh hoặc <a href="https://what3words.com/hoacam.conem.mua%C4%91%E1%BB%93" target='_blank'>///hoa cam.con em.mua đồ</a> trong tiếng Việt.
 <br>Google thì đưa ra giải-pháp mở <a href="https://maps.google.com/pluscodes/" target='_blank'>Plus Codes</a>, cho phép các nhà-phát-triển tự-do làm ra các hệ-thống dựa trên Plus Codes. Trong Google Maps, các ô-vuông có cạnh ba mét, mỗi ô-vuông được chỉ đến bằng một plus codes gồm bẩy chữ-cái và chữ-số, kèm theo địa-danh cấp tỉnh/thành-phố, ví-dụ cửa Nam chợ Bến-Thành là <a href="https://www.google.com/maps/place/7P28QMCX%2BQ7X/@10.7719875,106.6976872,19z/data=!4m4!3m3!8m2!3d10.7719875!4d106.6982344" target='_blank'>QMCX+Q7X , Hồ Chí Minh, Việt Nam</a>. Thật-ra phần địa-danh cấp tỉnh/thành-phố có-thể được thay bằng bốn chữ-cái và chữ-số, đó là ô-vuông có cạnh 110 Km chứa ô-vuông ba mét kia.
 <br>Ưu-điểm của toạ-độ địa-lý (và What3words, Plus Codes) so với địa-chỉ nhà là có-thể chỉ đến từng lối-ra-vào của toà-nhà hay khu-đất lớn trong khi địa-chỉ nhà không nêu rõ được.</p>
@@ -265,13 +265,14 @@ data-ad-slot="5275186684">
 <p>Tỷ-lệ nhà được vào-sổ NDAS chưa nhiều nên chưa-thể dùng ngay với mọi căn-nhà được. Mỗi-người có-thể tự tìm trong các công-cụ NDAS xem căn-nhà hay nơi-làm-việc của mình đã có NDAS chưa, và có-thể gửi yêu-cầu qua trang web NDAS để bưu-điện sớm vào-sổ. Nếu địa-chỉ của bạn đã được vào-sổ NDAS, bạn có thể công-bố địa-chỉ đó theo dạng NDAS như địa-chỉ cửa Tây chợ Bến-Thành ở trên.</p>
 <p>Khi Bưu-điện Việt-Nam hợp-tác với Google thì người-dùng có thể tìm căn-nhà mang địa-chỉ NDAS trong Google Maps. Khi NDAS đã hoàn-chỉnh, chúng ta sẽ không còn phải nghe những cú-điện-thoại như "tao đang đứng ở ngã tư xyz, đi tiếp đường nào tới nhà mày?", dịch-vụ giao-nhận hàng sẽ bớt tốn thời-gian hơn, mà thời-gian là tiền-bạc.</p>
 <p>Tôi tin rằng sẽ có những quy-định về việc dùng địa-chỉ-số một cách chính-thức trong các văn-bản pháp-lý như căn-cước-công-dân, giấy-chứng-nhận-quyền-sở-hữu-nhà, giấy-đăng-ký-kinh-doanh… Khi đó những địa-chỉ dài ngoằng như <i>275/3/18 Nguyễn Văn Thương, khu phố 5, phường Tân Thông Hội, quận Gò Môn, thành phố Hồ Chí Minh</i> sẽ được thay bằng NDAS:7234509875, thật là tiện-lợi. Khi đó, cuộc-đời người-ta gắn với những số quan-trọng: căn-cước-công-dân, địa-chỉ-số NDAS, điện-thoại-di-động, tài-khoản-ngân-hàng…</p>
+
 <h3>Những vấn-đề trong NDAS</h3>
-<p>Trong NDAS có chứa những thông-tin có thể thay-đổi theo thời-gian, đó là tên doanh-nghiệp, tên chủ-hộ, số-điện-thoại, địa-chỉ e-mail. Việc này sẽ khiến thông-tin dễ bị lạc-hậu nếu ngành bưu-điện không điều-chỉnh kịp-thời.</p>
+<p>Trong NDAS có chứa những chi-tiết có thể thay-đổi theo thời-gian, đó là tên doanh-nghiệp, tên chủ-hộ, số-điện-thoại, địa-chỉ e-mail. Việc này sẽ khiến thông-tin dễ bị lạc-hậu nếu ngành bưu-điện không điều-chỉnh kịp-thời. Ví-dụ người-dùng tìm theo tên doanh-nghiệp có-thể được chỉ tới địa-chỉ cũ.</p>
 <p>Tôi cho rằng NDAS sẽ không chỉ đến từng căn-nhà trong các khu-chung-cư mà chỉ có một vài địa-chỉ-số chung cho cả khu. Như-vậy vẫn phải ghi số của một căn cụ-thể kèm với NDAS, ví-dụ "NDAS:7203508756 D3-7".</p>
 <p>Có những con-hẻm nhỏ đến mức không-thể thấy bầu-trời đủ rộng để nhận sóng vệ-tinh nên không-thể biết được toạ-độ địa-lý của căn-nhà. Vì vậy không thể vào-sổ NDAS cho mọi căn-nhà trong các hẻm nhỏ. Có-lẽ giải-pháp tạm thời là đánh-dấu NDAS cho đầu hẻm và những vị-trí tương-đối thoáng trong hẻm, và các căn nhà sẽ ghi thêm số nhà kèm theo NDAS gần nhất, ví dụ "NDAS:7143207986 123/95/74".</p>
 
 <h2>Các nước khác</h2>
-<p>Một số nước, nhất là các nước chậm phát-triển, có tình-trạng địa-chỉ khó dùng như Việt-Nam, cũng đã áp-dụng địa-chỉ-số. Trong số đó có thể kể ra Ấn-độ, Ghana, Nigeria, Bờ-biển-ngà và các nước châu Phi khác. Ghana đã chính-thức dùng địa-chỉ-số trong mọi hoạt-động của xã-hội, và đã hợp-tác với Google để có thể dùng địa-chỉ-số trong Google Maps.</p>
+<p>Một số nước, nhất là các nước chậm phát-triển, có tình-trạng địa-chỉ khó dùng như Việt-Nam, cũng đã áp-dụng địa-chỉ-số. Trong số đó có thể kể ra Ấn-độ, Ghana, Nigeria, Bờ-biển-ngà và các nước châu Phi khác. Ghana đã chính-thức dùng địa-chỉ-số trong mọi hoạt-động của xã-hội, và đang hợp-tác với Google để trong tương-lai gần có thể dùng địa-chỉ-số trong Google Maps.</p>
 
   <hr>
   <div class="footer">
