--- a/huu-ich/hieu-qua-dau-tu.html
+++ b/huu-ich/hieu-qua-dau-tu.html
@@ -237,7 +237,7 @@ data-ad-slot="5275186684">
     <li>Anh A mua một căn nhà chung cư trả góp hàng tháng đồng thời cho thuê căn nhà đó trong 10 năm rồi bán đi.</li>
     <li>Anh B gửi tiền vào quỹ đầu tư hàng tháng, sau 10 năm rút ra được một món tiền lớn (<a href="dau-tu-co-phieu/so-tk-hay-dau-tu">Sổ tiết kiệm hay quỹ đầu tư</a>)</li>
   </ol>
-  Giữa anh A và anh B, ai có tốc độ gia tăng tài sản cao hơn?
+  <p>Giữa anh A và anh B, ai có tốc độ gia tăng tài sản cao hơn?</p>
 
 
 <!-- AMP display ads -->
@@ -307,35 +307,6 @@ data-ad-slot="5275186684">
   Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
-
-<amp-analytics>
-  <script type="application/json">
-    {
-      "requests": {
-        "pageview": "https://c.statcounter.com/12598906/0/9a8e736a/1/"
-      },
-      "triggers": {
-        "trackPageview": {
-          "on": "visible",
-          "request": "pageview"
-        }
-      }
-    }
-  </script>
-</amp-analytics>
-<amp-analytics type="googleanalytics">
-  <script type="application/json">
-  {
-  "vars": { "account": "UA-25268996-1" },
-  "triggers": {
-  "trackPageview": {
-  "on": "visible",
-  "request": "pageview"
-    }
-   }
-  }
-  </script>
-</amp-analytics>
 
 </main>
 </body>
