--- a/kinh-nghiem/may-tinh/cryptocurrency.html
+++ b/kinh-nghiem/may-tinh/cryptocurrency.html
@@ -261,7 +261,7 @@ Wallet có thể được đặt trong
 </ol>
 Có loại wallet còn giữ luôn tất cả các block dữ liệu giao dịch của toàn hệ thống, đó là full node. Cho tới năm 2021 thì toàn bộ các block Bitcoin chiếm 350 GB.
 <p>Ở hệ thống ngân hàng thường, tiền nằm trong các file trong hệ thống máy tính còn chữ ký thì nằm trên tay chủ tài khoản hoặc private key của chữ ký điện tử nằm trong máy hay USB do chủ tài khoản giữ. Tiền và chữ ký ở hai nơi khác nhau. Hacker phải biết được địa chỉ của tiền (số tài khoản) và chữ ký thì mới chuyển tiền đi nơi khác được.
-<br>Trong hệ thống Bitcoin, wallet chứa cả địa chỉ các Bitcoin lẫn private key. Hacker chép được file wallet là trở thành chủ của số Bitcoin trong wallet; hacker sẽ nhanh chóng chuyển hết Bitcoin trong wallet sang chỗ khác trước khi chủ wallet kịp biết.</p>
+<br>Trong hệ thống Bitcoin, hacker chỉ cần mnemonic phrase là trở thành chủ của số Bitcoin; hacker sẽ nhanh chóng chuyển hết Bitcoin trong wallet sang chỗ khác trước khi chủ wallet kịp biết.</p>
 <h2>Mua bán Bitcoin như thế nào?</h2>
 <p>Người mua chuyển tiền cho người bán rồi người bán chuyển lượng Bitcoin vào địa chỉ do wallet của người mua sinh ra. Bên mua Bitcoin chỉ cần cho biết địa chỉ dưới dạng dãy chữ số hoặc một QR code là đủ.
 <br>Nếu bên bán Bitcoin gõ dãy chữ số địa chỉ sai thì Bitcoin sẽ quay trở lại wallet của bên bán trong hầu hết các trường hợp, có một xác suất rất nhỏ là địa chỉ gõ sai đó có thật và địa chỉ đó sẽ nhận được lượng Bitcoin thay vì người mua nhận được. Việc này tương tự như chuyển khoản giữa hai ngân hàng khác nhau: hầu hết các lệnh chuyển sai tên hoặc số tài khoản bên nhận đều không được thực hiện, chỉ có trường hợp tình cờ mà tên và số tài khoản sai lại trùng với một tài khoản thật thì tiền sẽ chuyển cho người đó. Người chuyển khoản sai có thể nhờ ngân hàng thu hồi lại tiền, chuyển sai Bitcoin thì không thể thu hồi lại được. Trong những hệ thống cryptocurrency không có cơ chế kiểm tra địa chỉ như Ethereum thì gửi tiền gửi sai địa chỉ luôn luôn đi mất.</p>
@@ -333,35 +333,6 @@ Các bài liên quan:
   Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
-
-<amp-analytics>
-  <script type="application/json">
-    {
-      "requests": {
-        "pageview": "https://c.statcounter.com/12598906/0/9a8e736a/1/"
-      },
-      "triggers": {
-        "trackPageview": {
-          "on": "visible",
-          "request": "pageview"
-        }
-      }
-    }
-  </script>
-</amp-analytics>
-<amp-analytics type="googleanalytics">
-  <script type="application/json">
-  {
-  "vars": { "account": "UA-25268996-1" },
-  "triggers": {
-  "trackPageview": {
-  "on": "visible",
-  "request": "pageview"
-    }
-   }
-  }
-  </script>
-</amp-analytics>
 
 </main>
 </body>
